...
    <string name="scan_qr_summary_already_linked_title">Account  is already linked to the device</string>
    <string name="scan_qr_summary_http_not_supported_title">Insecure HTTP connection is not supported</string>
    <string name="scan_qr_summary_failure_title">Something went wrong!</string>

    <string name="fingerprint_setup_use_fingerprint_button">Use Fingerprint</string>
    <string name="fingerprint_setup_maybe_later_button">Maybe later</string>
    <string name="fingerprint_setup_configure_title">Configure Fingerprint</string>
    <string name="fingerprint_setup_configure_description">Unlock your secrets in a second.</string>
    <string name="fingerprint_setup_use_title">Use Fingerprint instead of passphrase</string>
    <string name="fingerprint_setup_use_description">Unlock your secrets in a second.</string>
    <string name="fingerprint_setup_biometric_title">Confirm Using Your Fingerprint</string>
    <string name="fingerprint_setup_biometric_subtitle">Touch the fingerprint sensor</string>
</resources>

