<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_bottom_sheet_dialog"
    android:paddingBottom="@dimen/dp_24"
    tools:ignore="missingConstraints">

    <TextView
        android:id="@+id/title"
        style="@style/Heading2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/help_menu_help"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:tint="@color/icon_tint" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/whyScanQrCodes"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_why_scan_codes"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_camera"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/enableLogsSwitch"
        style="@style/PasswordMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_enable_debug_logs"
        android:thumbTint="@color/selector_primary_switch"
        android:trackTint="@color/selector_primary_track_switch"
        app:drawableStartCompat="@drawable/ic_bug"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whyScanQrCodes" />

    <TextView
        android:id="@+id/accessLogs"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_access_logs"
        app:drawableStartCompat="@drawable/ic_bug"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/enableLogsSwitch" />

    <TextView
        android:id="@+id/importProfileManually"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_import_profile_manually"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_import_profile"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/accessLogs" />

    <TextView
        android:id="@+id/importAccountKit"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_import_account_kit"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_import_file"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@id/importProfileManually" />

    <TextView
        android:id="@+id/visitHelpWebsite"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_visit_help_website"
        app:drawableStartCompat="@drawable/ic_link"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@id/importAccountKit" />

</androidx.constraintlayout.widget.ConstraintLayout>
