<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Passbolt</string>
    <string name="help_website"
        translatable="false">https://help.passbolt.com/</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
...
    <string name="resource_tags_title">Resource Tags</string>

    <string name="folder_details_title">Folder details</string>
    <string name="folder_details_name_header">Folder name</string>
    <string name="folder_details_location_separator"
        translatable="false">›</string>
    <string name="help_button_description">Help</string>

    <string name="create_folder_title">Create folder</string>
    <string name="create_folder_name">Name</string>
    <string name="create_folder_name_validation">Folder name cannot be empty</string>
    <string name="create_folder_error_format">Could not create folder. %s</string>
    <string name="enter_folder_name">Enter folder name</string>
...
